refactor(fjage): improve immutability and readability
Make applicable fields final and simplify collection construction and conditionals.

Use Java 8 lambdas, type inference, and method signatures consistently.